--- a/package.json
+++ b/package.json
@@ -1,4 +1,6 @@
 {
+  "homepage": "https://keremcanseker.github.io/card-game-React",
+
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
