--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://keremcanseker.me/card-game-React",
+  "homepage": "https://keremcanseker.me/card-game-react",
 
   "name": "vite-project",
   "private": true,
